# permian-data-centers

./: .gitignore  README.md  candidates-list.csv  data-center-list.csv  pyproject.toml
.ipynb/: permit_extraction.ipynb
air-permits/: turbine-list.xlsx
air-permits/ghgpsd/: air-permit-7-ghgpsd.csv
air-permits/psd/: air-permit-7-psd.csv
data/processed/: candidates-list.csv  classified-list.csv  data-center-list.csv
data/raw/air-permits/ghgpsd/: air-permit-6.csv  air-permit-7.csv
data/raw/air-permits/psd/: air-permit-6.csv  air-permit-7.csv
data/raw/air-permits/std/: air-permit-6.csv  air-permit-7-std.csv  air-permit-7.csv
notebooks/: download_tceq_records.ipynb  extract_datacenter_info.ipynb  fetch_tceq_permits.ipynb  filter_permits.ipynb  permit_extraction.ipynb
