[project]
name = "permian-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "html5lib>=1.1",
    "ipykernel>=7.3.0",
    "lxml>=6.1.1",
    "pandas<3.0",
    "pip>=26.1.2",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "pymupdf>=1.28.0",
    "requests>=2.34.2",
]
